# cppuaa

./: CMakeLists.txt
cppuaa/: CMakeLists.txt  cppuaa.cpp  cppuaa.h
cppuaa/motion/: motion_config.json
cppuaa/motion/include/: ACSMotorController.h  IMotorController.h  MotorControllerFactory.h  PIMotorController.h  VirtualMotorController.h  motion_types.h  motor_controller.h  motor_ui.h
cppuaa/motion/src/: ACSMotorController.cpp  MotorControllerFactory.cpp  PIMotorController.cpp  VirtualMotorController.cpp  motion_config_manager.cpp  motor_controller.cpp  motor_ui.cpp
cppuaa/src/: application.h  main.cpp
